--- a/.local/ProjectSettings.json
+++ b/.local/ProjectSettings.json
@@ -1,1 +1,1 @@
-{"ProjectWatches":"{\"Value\":[]}","OpenedDocuments":"[\"Jam08.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}"}
+{"ProjectWatches":"{\"Value\":[]}","OpenedDocuments":"[\"Jam12.xaml\",\"Jam10.xaml\",\"Jam08.xaml\",\"Jam14.xaml\",\"Jam16.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}"}
